# cratesio-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  fly.toml  roba.toml
.claudes/: latest
.claudes/runs/: run-20260319-051201-eb76.json
.github/workflows/: ci.yml  deploy.yml
.worktrees/you-are-working-on-8b28/.claudes/: run.jsonl
.worktrees/you-are-working-on-c217/.claudes/: run.jsonl
.worktrees/you-are-working-on-f1d1/.claudes/: run.jsonl
scripts/: audit-client-endpoints.sh
src/: lib.rs  main.rs  state.rs
src/client/: changelog.rs  docsrs.rs  error.rs  mod.rs  osv.rs  owners.rs  query.rs  tests.rs  trusted.rs
src/docs/: format.rs
src/prompts/: compare.rs  evaluate_dependencies.rs  migration_guide.rs  recommend.rs  stack_review.rs
src/resources/: crate_info.rs  docs.rs  readme.rs
src/tools/: alternatives.rs  audit.rs  authors.rs  categories.rs  category.rs  changelog.rs  compare.rs  dependencies.rs  dependency_tree.rs  downloads.rs  features.rs  health_check.rs  info.rs  keyword_detail.rs  keywords.rs  mod.rs  owners.rs  readme.rs  release_timeline.rs  reverse_deps.rs  search.rs  summary.rs  user.rs  user_stats.rs  version_detail.rs  version_downloads.rs  versions.rs
tests/: mcp_integration.rs
